--- a/frontend/css/customer.css
+++ b/frontend/css/customer.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../Background.jpg');
+    background-image: url('../assets/Background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
